# Modules/Api/Http/Controllers/ShopController.php
@@ -14,44 +14,55 @@ use Modules\Mon\Http\Controllers\ApiController;
 
 class ShopController extends ApiController
 {
-	/** @var ApiShopRepository */
-	public $apiShopRepository;
-	public function __construct(Authentication $auth, ApiShopRepository $apiShopRepository)
-	{
-		parent::__construct($auth);
+    /** @var ApiShopRepository */
+    public $apiShopRepository;
 
-		$this->apiShopRepository = $apiShopRepository;
-	}
+    public function __construct(Authentication $auth, ApiShopRepository $apiShopRepository)
+    {
+        parent::__construct($auth);
 
-	public function detail(Request $request, $id) {
-		$shop = $this->apiShopRepository->detail($request,$id);
-		$data = $shop ? new ShopFullTransformer($shop) : null;
-		return $this->respond($data, ErrorCode::SUCCESS_MSG, ErrorCode::SUCCESS);
-	}
+        $this->apiShopRepository = $apiShopRepository;
+    }
 
-	public function shopNearest(Request $request)
+    public function detail(Request $request, $id)
+    {
+        $shop = $this->apiShopRepository->detail($request, $id);
+        $data = $shop ? new ShopFullTransformer($shop) : null;
+        return $this->respond($data, ErrorCode::SUCCESS_MSG, ErrorCode::SUCCESS);
+    }
+
+    public function search(Request $request)
     {
 
-	    $input = $request->all();
 
-	    $validator = Validator::make($input, [
-		    'lat' => 'required',
-		    'lng' => 'required',
-	    ]);
+        $shops = $this->apiShopRepository->getList($request);
+        return $this->respond(ShopTransformer::collection($shops), ErrorCode::SUCCESS_MSG, ErrorCode::SUCCESS);
+    }
 
-	    if($validator->fails()){
-		    return $this->respond([], ErrorCode::ERR19_MSG, ErrorCode::ERR19);
-	    }
-	    $lat = $request->get('lat');
-	    $lng = $request->get('lng');
-		$shops = $this->apiShopRepository->getShopNearest($lat, $lng);
+    public function shopNearest(Request $request)
+    {
+
+        $input = $request->all();
+
+        $validator = Validator::make($input, [
+            'lat' => 'required',
+            'lng' => 'required',
+        ]);
+
+        if ($validator->fails()) {
+            return $this->respond([], ErrorCode::ERR19_MSG, ErrorCode::ERR19);
+        }
+        $lat = $request->get('lat');
+        $lng = $request->get('lng');
+        $shops = $this->apiShopRepository->getShopNearest($lat, $lng);
         return $this->respond(ShopTransformer::collection($shops), ErrorCode::SUCCESS_MSG, ErrorCode::SUCCESS);
     }
 
     //TODO
-	public function shopBaoHanh(Request $request) {
-		$user = $this->auth->user();
-		$shops = $this->apiShopRepository->getShopBaoHanh($request, $user);
-		return $this->respond(ShopTransformer::collection($shops), ErrorCode::SUCCESS_MSG, ErrorCode::SUCCESS);
-	}
+    public function shopBaoHanh(Request $request)
+    {
+        $user = $this->auth->user();
+        $shops = $this->apiShopRepository->getShopBaoHanh($request, $user);
+        return $this->respond(ShopTransformer::collection($shops), ErrorCode::SUCCESS_MSG, ErrorCode::SUCCESS);
+    }
 }
